--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Inventory Manager</string>
+    <string name="current_quantity_hint">Current Quantity:</string>
+    <string name="price_hint">Price:</string>
 </resources>
