--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Inventory Manager</string>
     <string name="current_quantity_hint">Current Quantity:</string>
     <string name="price_hint">Price:</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
